# CC1101_CC2500

./: CMakeLists.txt
app/: stm32u575zi_UART.c  stm32u575zi_UART.h
app/master/: README.md  m_main.c  main.c
app/slave/: README.md  main.c  s_main.c
cc1101/header/: cc1101.h
cc1101/main/: cc1101.c
cc2500/header/: cc2500.h
cc2500/main/: cc2500.c
common/: protocol.h  stm32u575_lowpower.c  stm32u575_lowpower.h
docs/: 20230710.md
examples/: slave_implant.c
